# pycon-2025-demo

./: .env.sample  .gitignore  README.md  convert_to_fixture.py  example_basic.py  pyproject.toml  simple_test.py  t.py  test_htmx_trigger.html  test_new_structure.py  test_roleplay.py  test_streaming.md  test_verbose.py
.claude/: settings.local.json
accounts/: admin.py  forms.py  urls.py  views.py
dashboard/: urls.py
melon/: admin.py  models.py  urls.py  views.py
melon/fixtures/: initial_data.json
melon/migrations/: 0001_initial.py
melon/templates/melon/: base.html  (+1 more)
mysite/: settings.py  urls.py
prompts/: admin.py  forms.py  forms_base.py  models.py  test_forms.py  urls.py  validators.py  views.py
prompts/migrations/: 0001_initial.py  0002_alter_prompt_content_alter_prompt_tags_and_more.py  0003_remove_title_unique.py
roleplay/: admin.py  core.py  django_stores.py  forms.py  models.py  prompts.py  tests.py  urls.py  views.py
roleplay/migrations/: 0001_initial.py  0002_alter_chatmessage_options_alter_chatsession_options_and_more.py  0002_remove_chatsession_is_active.py  0003_alter_chatmessage_session.py  0003_alter_chatsession_max_tokens_and_more.py  0004_alter_chatsession_model_alter_chatsession_title.py
templates/: base.html
templates/admin/: base_site.html  index.html  statistics.html  user_activity.html
templates/registration/: login.html
todo/: forms.py  models.py  urls.py  views.py
todo/migrations/: 0001_initial.py
widgets/: urls.py  views.py  weather_service.py
widgets/migrations/: 0001_initial.py  0002_delete_weatherlocation.py
(+45 files in other folders)
