[project]
name = "pycon-2025-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-tailwind>=1.0.3",
    "django>=5.2.4",
    "django-crispy-forms>=2.4",
    "openai>=1.98.0",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.isort]
line_length = 120

[tool.flake8]
max-line-length = 120
